# TicketToken-Platform

./: .gitignore  README.md  package.json
backend-services/contracts/fractional-ownership/: Cargo.toml
backend-services/frontend/partner-portal/: next.config.js  package-lock.json  package.json  tailwind.config.js
backend-services/services/access-service/: README.md  package.json
backend-services/services/analytics-service/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
database/monitoring/: performance-monitor.sql
database/optimizations/: indexes.sql  materialized-views.sql  partitions.sql  query-optimization.sql
database/scripts/: deploy-optimizations.sh  maintenance.sh
docs/: tickettoken_summary_20250621.md
frontend-apps/admin-panel/: README.md  package.json
frontend-apps/artist-portal/: package.json
frontend-apps/collection-app/: index.html  package.json
frontend-apps/consumer-app/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend-apps/consumer-app/src/app/: layout.tsx  (+2 more)
frontend-apps/marketplace-app/: index.html  package.json
frontend-apps/partner-portal/: package.json
frontend-apps/venue-dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.js
mobile-apps/: run_consumer.sh  run_venue.sh
scripts/: concert_level_test.sh  create_marketplace.sh  deploy.sh  project_overview.sh  scale.sh  status.sh  stress_test_suite.sh  test-my-system.sh  tickettoken-tester.js  ultimate_stress_test.sh
smart-contracts/programs/access-controller/: Cargo.toml  README.md
smart-contracts/programs/access-controller/src/: lib.rs
smart-contracts/programs/governance-rewards/: Cargo.toml
smart-contracts/programs/governance-rewards/src/: lib.rs
smart-contracts/programs/governance-rewards/src/instructions/: claim_reward.rs  create_referral_code.rs  mod.rs  tier_upgrade.rs  track_referral.rs
smart-contracts/programs/revenue-splitter/: Cargo.toml  README.md
smart-contracts/programs/revenue-splitter/src/: lib.rs
smart-contracts/programs/ticket-nft-core/: Cargo.toml  README.md
smart-contracts/programs/ticket-nft-core/src/: lib.rs
(+348 files in other folders)
