[package]
name = "access-controller"
version = "0.1.0"
description = "access-controller smart contract for TicketToken"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "access_controller"

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []
