[package]
name = "ticket-nft-core"
version = "0.1.0"
description = "ticket-nft-core smart contract for TicketToken"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticket_nft_core"

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []
